trackster: Make navbar more compact; line things up properly. Fix ReferenceTrack adding extra space to top LabelTrack

--- a/static/june_2007_style/blue/trackster.css
+++ b/static/june_2007_style/blue/trackster.css
@@ -1,12 +1,14 @@
 .viewport-container{overflow-x:hidden;overflow-y:auto;}
-.nav{padding:0 0;color:#333;font-weight:bold;background:#cccccc;background-image:url(panel_header_bg.png);background-position:bottom center;background-repeat:repeat-x;height:2.5em;border-bottom:solid #333 1px;}
+.nav{padding:0 0;color:#333;font-weight:bold;background:#cccccc;background-image:url(panel_header_bg.png);background-position:middle center;background-repeat:repeat-x;border-bottom:solid #333 1px;}
 .content{font:10px verdana;}
-.nav-controls{text-align:center;position:relative;padding:2px 0;}
+.nav-controls{text-align:center;padding:1px 0;}
 .nav-controls input{margin:0 5px;}
-.nav-controls a{padding:0 0.4em;}
+#zoom-in,#zoom-out{display:inline-block;height:16px;width:16px;margin-bottom:-3px;}
+#zoom-out{background:transparent url(../images/fugue/magnifier-zoom-out.png) center center no-repeat;}
+#zoom-in{margin-left:10px;background:transparent url(../images/fugue/magnifier-zoom.png) center center no-repeat;}
 .nav-input{font-size:12px;width:30em;z-index:1000;}
-.location{display:inline-block;width:15em;margin:0px 10px;}
-.draghandle{cursor:move;float:left;background:transparent url(../images/visualization/draggable_horizontal.png) center center no-repeat;width:10px;height:12px;}
+.location{display:inline-block;width:15em;margin:0 10px;}
+.draghandle{margin-top:2px;cursor:move;float:left;background:transparent url(../images/visualization/draggable_horizontal.png) center center no-repeat;width:10px;height:12px;}
 .intro{z-index:1000;margin-left:auto;margin-right:auto;color:#555;text-align:center;font-size:16px;}
 .overview{width:100%;margin:0px;color:white;}
 .overview-viewport{position:relative;height:14px;background:white;margin:0;}
@@ -17,15 +19,16 @@
 .viewport-canvas{width:100%;height:100px;}
 .yaxislabel{color:#777;z-index:100;}
 .line-track .track-content{border-top:1px solid #ddd;border-bottom:1px solid #ddd;}
-.track{background:white;margin-bottom:1px;padding-bottom:4px;border-bottom:#eee solid 1px;}
+.track{background:white;margin-bottom:2px;border-bottom:#eee solid 1px;}
 .track-header{text-align:left;padding:4px 0px;color:#666;}
-.track-header .menubutton{margin-left:3px;}
+.track-header .menubutton{margin-left:0px;}
 .track-content{overflow:hidden;text-align:center;}
-.track.error .track-content{background-color:#ECB4AF;}
-.track.nodata .track-content{background-color:#ddd;}
+.track.error .track-content{background-color:#ECB4AF;padding:2px 0;}
+.track.nodata .track-content{background-color:#ddd;padding:2px 0;}
 .loading{min-height:100px;}
 .label-track{font-size:10px;border:none;padding:0;margin:0;height:1.3em;}
 .label-track .label{border-left:solid #999 1px;padding:1px;padding-bottom:2px;display:inline-block;}
+.reference-track{border:none;margin:0;padding:0;}
 .right-float{float:right;margin-left:5px;}
 .top-labeltrack{position:relative;border-bottom:solid #999 1px;}
 .nav-labeltrack{border-top:solid #999 1px;border-bottom:solid #333 1px;}
